@@ -11438,6 +11438,10 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
 
       <itemizedlist>
         <listitem>
+          <para>Implemented possibility to D&amp;D XPDL file</para>
+        </listitem>
+
+        <listitem>
           <para>Shark mode:</para>
 
           <para>- Implemented support for new extended attributes of
